--- a/EnjoyFood/app/src/main/res/layout/activity_board_edit.xml
+++ b/EnjoyFood/app/src/main/res/layout/activity_board_edit.xml
@@ -76,14 +76,14 @@
                 android:src="@drawable/imageplus" />
 
             <Button
-                android:id="@+id/writeBtn"
+                android:id="@+id/editBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/radius"
-                android:text="글쓰기" />
+                android:text="수정하기" />
 
         </LinearLayout>
 
