--- a/EnjoyFood/app/src/main/res/layout/comment_list.xml
+++ b/EnjoyFood/app/src/main/res/layout/comment_list.xml
@@ -1,29 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/titleText"
-        android:text="title"
+        android:id="@+id/commentText"
+        android:text="comment"
         android:textSize="20sp"
         android:layout_margin="15dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/contentText"
-        android:text="content"
-        android:textSize="15sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"/>
-
     <TextView
         android:id="@+id/timeText"
         android:text="time"
